--- a/Thymeleafboot/src/main/resources/templates/condition.html
+++ b/Thymeleafboot/src/main/resources/templates/condition.html
@@ -16,6 +16,7 @@
 	 <h1 th:case="'0'">List Contain zero element..</h1>
 	 <h1 th:case="'1'"> List is contain one element..</h1>
 	 <h1 th:case="*">List contain more than one element..</h1>
+	 <h1 th:case="'3'">List contains three elements...</h1>
 	 </div>             
 </body> 
 </html>
